--- a/wp-content/themes/amaterasu/css/main.css
+++ b/wp-content/themes/amaterasu/css/main.css
@@ -1,91 +1,230 @@
 :root {
-    --black: #171321;
-    --dkblue: #0d314b;
-    --plum: #4b0d49;
-    --hotmag: #ff17e4;
-    --magenta: #e310cb;
-    --aqua: #86fbfb;
-    --white: #f7f8fa;
-    --mygray: #8E8277;
-    --hovergray: #665646;
-    --font-size: 1.3rem;
-    --mono: "Oxygen mono", monospace;
-    --sans: Oxygen, sans-serif;
+  --black: #171321;
+  --dkblue: #0d314b;
+  --plum: #4b0d49;
+  --hotmag: rgb(15, 180, 84);
+  --magenta: rgb(8, 211, 93);
+  --aqua: #86fbfb;
+  --white: #f7f8fa;
+  --mygray: #8e8277;
+  --hovergray: #665646;
+  --linkblue: #1e30f3;
+  --font-size: 1.3rem;
+  --mono: "Oxygen mono", monospace;
+  --sans: Oxygen, sans-serif;
 }
-/* border box model: https://css-tricks.com/box-sizing/ */
 html {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 *,
 *::before,
 *::after {
-    box-sizing: inherit;
+  box-sizing: inherit;
 }
 /* generic styles for the page */
 body {
-    padding: 0;
-    margin: 0;
-    font-family: var(--sans);
-    /* background-color: var(--black); */
-    /* color: var(--white); */
-    font-size: var(--font-size);
+  padding: 0;
+  margin: 0;
+  font-family: var(--sans);
+  background-color: var(--black);
+  color: var(--white);
+  font-size: var(--font-size);
 }
 h1,
 h2,
 h3 {
-    margin: 0;
-    /* color: var(--aqua); */
+  margin: 0;
+  color: var(--aqua);
 }
 a {
-    color: var(--mygray);
-    text-decoration: none;
+  color: var(--magenta);
 }
 
 a:hover {
-    color: var(--hovergray);
-    text-decoration: none;
+  color: var(--hotmag);
+  text-decoration: none;
 }
 /* intro styles */
 #intro {
-    padding-bottom: 10rem;
+  padding-bottom: 10rem;
+}
+
+
+#intro{
+    padding-bottom: 5rem 1rem 10rem 1rem;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+/* navigation */
+nav {
+  font-family: var(--mono);
+  font-size: 80%;
+  padding: 1rem;
+}
+
+nav h1 a {
+  font-family: var(--sans);
+}
+
+nav ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+}
+nav li:first-child {
+  flex-basis: 100%;
+  text-align: center;
+}
+nav [class*="fa-"] {
+  font-size: 150%;
+  color: var(--aqua);
+}
+nav h1 [class*="fa-"] {
+  font-size: 100%;
+  color: var(--aqua);
+}
+nav a {
+  color: white;
+  text-decoration: none;
+  display: block;
+}
+
+nav a:hover,
+nav [class*="fa-"]:hover {
+  color: var(--magenta);
+}
+
+.button {
+  background-color: var(--magenta);
+  color: white;
+  padding: 0.5rem;
+  border-radius: 5px;
+  font-family: var(--mono);
+  text-decoration: none;
+}
+
+.button:hover {
+  color: white;
+  background-color: var(--hotmag);
+}
+@media (min-width: 850px) {
+  nav {
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+  nav li:first-child {
+    flex-basis: auto;
+    text-align: left;
+    margin-right: auto;
+  }
 }
 
 #intro p {
-    font-size: 1rem;
-    line-height: 1.5;
+  font-size: 1rem;
+  line-height: 1.5;
 }
 
 #intro .name {
-    font-family: var(--mono);
-    font-size: 1rem;
+  font-family: var(--mono);
+  font-size: 1rem;
 }
 
 .name span {
-    font-family: var(--sans);
-    font-size: 4rem;
-    color: var(--aqua);
-    display: block;
-    font-weight: 300;
+  font-family: var(--sans);
+  font-size: 4rem;
+  color: var(--aqua);
+  display: block;
+  font-weight: 300;
 }
 
 #intro h2 {
-    font-size: 4rem;
+  font-size: 4rem;
 }
 
-header {
-    background-color: #86fbfb;
-    display: flex;
-    justify-content: space-between;
-    padding: 0 2rem;
+.gradient{
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(255,23,228,1) 0%, rgba(134,251,251,1) 100%);
+    height: 2.5px;
 }
 
-.header-left {
-    display: flex;
-    align-items: center;
+.section-blue{
+  background-color: var(--dkblue);
 }
 
-.header-right ul{
+.section-plum{
+    background-color: var(--plum);
+}
+
+
+#projects h4 {
+  font-size: 1rem;
+  font-family: var(--mono);
+  margin: 0;
+}
+.blackbox {
+    padding: 1rem;
+    border-radius: 10px;
+    color: white;
+    background-color: var(--black);
+    font-size: 1rem;
+    line-height: 1.5;
+}
+#projects ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
     display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-start;
     gap: 1rem;
-    list-style: none;
+    font-size: 1rem;
+}
+#projects img {
+    margin: 2rem 0 4rem 0;
+    padding: 1rem;
+    border-left: 1px solid var(--aqua);
+    border-top: 1px solid var(--aqua);
+    border-radius: 25px;
+
+#contact {
+  width: 408px;
+  text-align: center;
+  margin: 0 auto;
+  padding: 3rem;
+}
+
+#contact p:last-child {
+  margin-top: 3rem;
+}
+
+footer {
+  text-align: center;
+  padding: 4rem 0;
+}
+
+footer ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 2rem 0;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  gap: 3rem;
+  font-size: 3rem;
+}
+@media (min-width: 850px) {
+  nav {
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+  nav li:first-child {
+    flex-basis: auto;
+    text-align: left;
+    margin-right: auto;
+  }
 }
